# financial_contracts

./: .gitignore  Assets.hs  Contracts.hs  Currencies.hs  Derivatives.hs  README.md  Serialization.hs  Setup.hs  SpecialContracts.hs  Stocks.hs  StructuredProducts.hs  TODO.md  Termsheet.hs  Valuation.hs  contracts.cabal  examples.hs  financial-contracts.cabal  flake.nix  stack.yaml
Contracts/: BRC.hs
app/: Main.hs
src/: Assets.hs  Cashflows.hs  Contracts.hs  Derivatives.hs  Derivatives_examples.hs  Examples.hs  Models.hs  Valuation.hs  examples.hs
src/Models/: Binomial.fut  BlackScholes.fut  CoxRossRubinstein.fut  GeometricBrownianMotion.fut  GeometricBrownianMotion.hs  Greeks.fut  LSMC.fut  Lattice.fut  Models.fut  Paths.fut  Payoff.fut  README  README.md
test/: CashflowTests.hs  ModelTests.hs
test/data/: README.md
