cabal-version:       3.4
name:                contracts
version:             0.1.0.0
license:             BSD-3-Clause
author:              Yves Hauser
maintainer:          yves.hauser@gmail.com
category:            Finance
build-type:          Simple

library
  hs-source-dirs:      src
  exposed-modules:     Contracts
                     , Derivatives
                     , Derivatives_examples
                     , Examples
                     , Valuation
  build-depends:       aeson
                     , base >=4.11 && <4.17
                     , bytestring
                     , Chart
                     , Chart-diagrams
                     , erf
                     , logfloat
                     , list-transformer
                     , monad-bayes
                     -- , monad-extras
                     , mtl
                     , mwc-random
                     , random
                     , text
                     , time
                     , transformers
