cabal-version:       3.4
name:                contracts
version:             0.1.0.0
license:             BSD-3-Clause
author:              Yves Hauser
maintainer:          yves.hauser@gmail.com
category:            Finance
build-type:          Simple

library
  hs-source-dirs:      src
  c-sources:           src/Models/Models.c
  default-extensions:  EmptyDataDecls
  exposed-modules:     Contracts
                     , Derivatives
                     , Models
                     , Valuation
  other-modules:     , Models.Futhark
                     , Models.Futhark.Config
                     , Models.Futhark.Context
                     , Models.Futhark.Entries
                     , Models.Futhark.Fut
                     , Models.Futhark.Raw
                     , Models.Futhark.TypeClasses
                     , Models.Futhark.Types
                     , Models.Futhark.Utils
                     , Models.Futhark.Wrap
  build-depends:       aeson
                     , base >=4.11 && <4.17
                     , bytestring
                     , deepseq
                     , erf
                     , logfloat
                     , massiv
                     , monad-control
                     , mtl
                     , mwc-random
                     , random
                     , text
                     , time
                     , transformers
                     , transformers-base

executable models
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       contracts
                     , base >=4.11 && <4.17
